# matmod-8sem

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
lab1/: .gitignore  CMakeLists.txt  README.md
lab1/alia/: CMakeLists.txt  README.md
lab1/alia/report/: analysis.mw  result.ipynb  ЛР1_Галямова.docx
lab1/alia/src/: CMakeLists.txt  main.cpp  params.h
lab1/example/ravill/: Task_1.ipynb  Равиль матмод лаб5.docx
lab1/misha/: .gitignore  README.md  analysis.mw  matmod_8sem_lab1.ipynb  results.xlsx  ЛР1_Aкмурзин.docx
lab1/misha/report/: analysis.mw  result.ipynb  ЛР1_Aкмурзин.docx
lab1/misha/result/: first_particle_100_0.npy  first_particle_129154_7.npy  first_particle_16681_5.npy  first_particle_2154_3.npy  first_particle_278_1.npy  first_particle_46415_6.npy  first_particle_5994_4.npy  first_particle_774_2.npy  results.xlsx
lab1/misha/src/: CMakeLists.txt  main.cpp  main_my.cpp  main_rustem.cpp  matmod_8sem_lab1.ipynb  params.h
lab2/: .gitignore  culturemedium_task3.py
lab2/example/: GameLife_finaly.py  Neural.py  Organisms.py  Отчет к л.р. №1.docx
lab2/example/matmod2_2/: View.py  View2.py  View3.py  View4.py  main.py  Лабораторная№2.docx
lab2/misha/: Organisms.py  Organisms_ver2.py  README.md  culturemedium_task3.py  draw.py  gamelife.py  gamelife_cycle.py  neural.py  organism.py
lab2/misha/report/: ЛР1 Купряхин В.В..docx
lab2/misha/src/: Organisms.py  Organisms_ver2.py  gamelife.py  main.py  neural.py
lab3/: .gitignore  CMakeLists.txt  README.md
lab3/example/: CMakeLists.txt  HelmholtzEquation.cpp  rustem.cpp
lab3/example/report/: Отчет к л.р. №3.docx
lab3/misha/: CMakeLists.txt  README.md  main.cpp  main_lib.cpp  main_lib.h  main_rustem.cpp  main_test.cpp  main_vadim.cpp
lab3/misha/report/: draw.py  lab3.ipynb  ЛР3_Aкмурзин.docx  ЛР_Aкмурзин.docx
lab3/report/: draw.ipynb  draw.py  ЛР3_Галямова.docx
lab3/src/: .gitignore  CMakeLists.txt  main_lib.cpp  main_rustem.cpp  main_test.cpp  main_vadim.cpp
lab4/: CMakeLists.txt
lab4/misha/: .gitignore  CMakeLists.txt  main.cpp  main_part1.cpp  main_part2.py  main_part3.py  main_part4.py  plot.py
lab4/misha/report/: ЛР4_Aкмурзин.docx
rgr/: task2.mw  матмод2_ргр (3).xlsx
rgr/example/: Data_Alia.xlsx  Data_Danis.xlsx  Data_Misha.xlsx  Data_Myrat.xlsx  Task1.ipynb  Task2.ipynb  ~$РГР№2.docx  РГР№2.docx
